k8s/kubernets/app/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.xxxxx.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
